swag for /login, /passwordrecover, /resetpassword
